samples/_failures_safe/1761410801_3b18b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7427c7a5.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_7427c7a5.c:163:5: error: expected declaration or statement at end of input
  163 |     token->line = *line;
      |     ^~~~~
